[US RABB-852] configure all contracts at the level of each tenant